fixes #13405 ui date widget z-index

--- a/themes/BluebirdSeven/css/bluebird.css
+++ b/themes/BluebirdSeven/css/bluebird.css
@@ -27,6 +27,10 @@ a.helpicon {
 .select2-drop {
   z-index: 100000 !important;
 }
+.ui-datepicker {
+  z-index: 100001 !important;
+}
+
 
 /*no user logged in page*/
 body.user-no-roles {
